# FreeGrids

./: .ghci  .gitignore  cabal.sandbox.config  grids.cabal  main.hs
src/: Main.hs  main.hs
src/Data/: Cell.hs  Slider.hs
src/Renderer/: Character.hs  Field.hs  Field.hs~  Renderer.hs
src/World/: Command.hs  Data.hs  Parser.hs  World.hs
src/World/Data/: Cell.hs  Slider.hs
src/World/Field/: Entities.hs  Field.hs
src/World/Field/Entity/: Character.hs  Entity.hs
test/World/: DataSpec.hs
test/World/Data/: CellSpec.hs  SliderSpec.hs
test/World/Field/: Entities.hs  FieldSpec.hs
