Name:   Grids
Version: 0.0
Synopsis: 
Description: 
HomePage:
License: BSD3
Author: ggkuron
Copyright: 
category: Game
Build-Type: Simple
Cabal-Version:  >=1.8
data-files: images/*.png, images/maptips/*.png

extra-source-files:
    nat.hs

Executable grids
  Main-is:    main.hs
  Hs-Source-Dirs: src
  Build-Depends: base >= 2.0
               , free-game >= 1.0
               , elerea
               , containers >= 0.5.0.0
               , lens >= 4.1.2
               , array >= 0.4.0.1
               , range >= 0.1.0.0
               , template-haskell
