Name:   Grids
Version: 0.0
Synopsis: 
Description: 
HomePage:
License: BSD3
Author: ggkuron
Copyright: 
category: Game
Build-Type: Simple
Cabal-Version:  >=1.8
data-files: images/*.png, images/maptips/*.png

extra-source-files:
    cell.hs

Executable grids
  Main-is:    main.hs
  Hs-Source-Dirs: src
  Other-modules: World.Data.Cell
               , World.Data.Slider
               , World.Data
               , World.Field.Field
               , World.Field.Entity.Entity
               , World.Field.Entity.Character
               , World.Field.Entities
               , World.Command
               , Renderer.Renderer
               , Renderer.Field
  Build-Depends: base >= 2.0
               , free-game >= 1.0
               , elerea == 2.8.0
               , containers >= 0.5.0.0
               , lens >= 4.1.2
               , array >= 0.4.0.1
               , range >= 0.1.0.0
               , template-haskell
