Name:   grids
Version: 0.0
Synopsis: 
Description: 
HomePage:
License: BSD3
Author: ggkuron
Copyright: 
category: Game
Build-Type: Simple
Cabal-Version:  >=1.8
data-files: images/*.png, images/maptips/*.png, src/field.dat


Executable grids
  main-is:    Main.hs
  hs-source-dirs: src
  other-modules: World.Data.Cell
               , World.Data.Slider
               , World.Data
               , World.Field.Field
               , World.Field.Entity.Entity
               , World.Field.Entity.Character
               , World.Field.Entities
               , World.Parser
               , World.Command
               , Renderer.Renderer
               , Renderer.Field
  build-depends: base >= 4.6 && < 5
               , free-game >= 1.1.81
               , linear >= 1.19
               , elerea >= 2.8.0
               , containers >= 0.5.0.0
               , lens 
               , array >= 0.4.0.1
               , template-haskell
               , parallel >= 3.2.0.6
               , deepseq >= 1.3.0.2
               , strict
               , trifecta
               , parsers
  ghc-options: -O2 -rtsopts -eventlog -threaded "-with-rtsopts=-N4 -s -l"

test-suite spec
    type: exitcode-stdio-1.0
    ghc-options: -Wall
    hs-source-dirs: test
                 ,  src
    main-is: Spec.hs
    build-depends: base >= 4.6 && < 5
               , free-game >= 1.1.81
               , elerea >= 2.8.0
               , containers >= 0.5.0.0
               , lens
               , array >= 0.4.0.1
               , template-haskell
               , parallel >= 3.2.0.6
               , deepseq >= 1.3.0.2
               , strict
               , hspec == 2.*
               , hspec-expectations >= 0.3.3
        
